--- a/FrontTaller/src/app/crud-revisiones/crud-revisiones.component.html
+++ b/FrontTaller/src/app/crud-revisiones/crud-revisiones.component.html
@@ -128,7 +128,7 @@ justify-content: flex-end;">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h1 class="modal-title fs-5" id="staticBackdropLabel">Registro de usuario</h1>
+        <h1 class="modal-title fs-5" id="staticBackdropLabel">Registro de Revision</h1>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
@@ -205,8 +205,7 @@ justify-content: flex-end;">
 
             <div style="padding: 0 0 10px 10px">
               <button type="submit" data-bs-dismiss="modal" (click)="saveUser()" style="width: 32%; ;" class="btn btn-outline-success"
-                >Agregar
-              </button>
+                >Agregar</button>
               <!-- este boton lo que hace es guardar y arrancar el segundo modal
                 <button data-bs-target="#exampleModalToggle2" data-bs-toggle="modal" (click)="saveUser()" style="width: 32%; ;" class="btn btn-outline-success" type="button">Agregar
               </button>
