--- a/FrontTaller/src/app/crud-usuarios/crud-usuarios.component.html
+++ b/FrontTaller/src/app/crud-usuarios/crud-usuarios.component.html
@@ -141,7 +141,7 @@ justify-content: flex-end;">
                 <select class="form-select" id="validationCustom01" required>
                   <option selected disabled value="">Seleccionar</option>
                   <option>CC</option>
-                  <option>Pasasporte</option>
+                  <option>Pasaporte</option>
                 </select>
                 <div class="invalid-feedback">Campo requerido</div>
               </div>
