--- a/FrontTaller/src/app/crud-revisiones/crud-revisiones.component.html
+++ b/FrontTaller/src/app/crud-revisiones/crud-revisiones.component.html
@@ -78,7 +78,7 @@ justify-content: flex-end;">
             <th mat-header-cell *matHeaderCellDef> Gestión </th>
             <td mat-cell *matCellDef="let element">
 
-              <mat-icon class="cls-icon" (click)="deleteUser(element.idPropietario)" style="color: red;">delete_forever
+              <mat-icon class="cls-icon" (click)="deleteUser(element.idRevision)" style="color: red;">delete_forever
               </mat-icon>
               <mat-icon class="cls-icon" (click)="editar()" style="color: green;">edit</mat-icon>
 
@@ -205,7 +205,8 @@ justify-content: flex-end;">
 
             <div style="padding: 0 0 10px 10px">
               <button type="submit" data-bs-dismiss="modal" (click)="saveUser()" style="width: 32%; ;" class="btn btn-outline-success"
-                >Agregar</button>
+                >Agregar
+</button>
               <!-- este boton lo que hace es guardar y arrancar el segundo modal
                 <button data-bs-target="#exampleModalToggle2" data-bs-toggle="modal" (click)="saveUser()" style="width: 32%; ;" class="btn btn-outline-success" type="button">Agregar
               </button>
