--- a/FrontTaller/src/app/crud-revisiones/crud-revisiones.component.html
+++ b/FrontTaller/src/app/crud-revisiones/crud-revisiones.component.html
@@ -136,7 +136,7 @@ justify-content: flex-end;">
         <div>
           <form action="" class="row g-3 needs-validation"  novalidate>
 
-            <div style="    margin: 5px 0 10px;" class="row " [formGroup]="formUser">
+            <div style="    margin: 5px 0 10px;" class="row " [formGroup]="formRevi">
               <div class="col">
                 <label for="validationCustom02" class="form-label">ID</label>
               </div><
@@ -146,7 +146,7 @@ justify-content: flex-end;">
               </div>
             </div>
 
-            <div style="    margin: 5px 0 10px;" class="row " [formGroup]="formUser">
+            <div style="    margin: 5px 0 10px;" class="row " [formGroup]="formRevi">
               <div class="col">
                 <label for="validationCustom03" class="form-label">Fecha</label>
               </div>
@@ -156,7 +156,7 @@ justify-content: flex-end;">
               </div>
             </div>
 
-            <div style="    margin: 5px 0 10px;" class="row" [formGroup]="formUser">
+            <div style="    margin: 5px 0 10px;" class="row" [formGroup]="formRevi">
               <div class="col">
                 <label for="validationCustom04" class="form-label">Estado</label>
               </div>
@@ -167,7 +167,7 @@ justify-content: flex-end;">
               </div>
             </div>
 
-            <div style="    margin: 5px 0 10px;" class="row" [formGroup]="formUser">
+            <div style="    margin: 5px 0 10px;" class="row" [formGroup]="formRevi">
               <div class="col">
                 <label for="validationCustom05" class="form-label">Observaciones</label>
               </div>
@@ -177,7 +177,7 @@ justify-content: flex-end;">
               </div>
             </div>
 
-            <div style="    margin: 5px 0 10px;" class="row" [formGroup]="formUser">
+            <div style="    margin: 5px 0 10px;" class="row" [formGroup]="formRevi">
               <div class="col">
                 <label for="validationCustom04" class="form-label">ID Vehiculo</label>
               </div>
@@ -188,7 +188,7 @@ justify-content: flex-end;">
               </div>
             </div>
 
-            <div style="margin: 5px 0 10px;" class="row" [formGroup]="formUser">
+            <div style="margin: 5px 0 10px;" class="row" [formGroup]="formRevi">
               <div class="col">
                 <label for="validationCustom07" class="form-label">Mecanico ID</label>
               </div>
