--- a/FrontTaller/src/app/crud-revisiones/crud-revisiones.component.html
+++ b/FrontTaller/src/app/crud-revisiones/crud-revisiones.component.html
@@ -136,17 +136,17 @@ justify-content: flex-end;">
         <div>
           <form action="" class="row g-3 needs-validation"  novalidate>
 
-            <div style="    margin: 5px 0 10px;" class="row " [formGroup]="formRevi">
+            <!-- <div style="    margin: 5px 0 10px;" class="row " >
               <div class="col">
                 <label for="validationCustom02" class="form-label">ID</label>
               </div><
               <div class="col">
-                <input id="validationCustom02" type="text" class="form-control" formControlName="idRevision" required/>
+                <input id="validationCustom02" type="text" class="form-control"  required/>
                 <div class="invalid-feedback">Campo requerido</div>
               </div>
-            </div>
+            </div> -->
 
-            <div style="    margin: 5px 0 10px;" class="row " [formGroup]="formRevi">
+            <div style="    margin: 5px 0 10px;" class="row " >
               <div class="col">
                 <label for="validationCustom03" class="form-label">Fecha</label>
               </div>
